--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
     "@nebular/auth": "^5.0.0",
-    "@nebular/eva-icons": "5.0.0",
+    "@nebular/eva-icons": "^5.0.0",
     "@nebular/theme": "^5.0.0",
     "eva-icons": "^1.1.2",
     "rxjs": "~6.5.4",
